--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,4 +1,5 @@
-p {
-  color: red;
-  font-size: 34pt;
+.bg-container {
+  background-image: url('../img/home-bg.jpg');
+  background-size: cover;
+  min-height: 100vh;
 }
