--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,6 +1,9 @@
 .nav-box {
-  background-color: olivedrab;
+  background-image: url('../img/navbar.png');
+  background-size: cover;
+  background-repeat: no-repeat;
   padding: 1em 0 1em 1em;
+  height: 80px;
 }
 
 .nav-item {
