--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,5 +1,6 @@
 .bg-container {
   background-image: url('../img/home-bg.jpg');
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);
   background-size: cover;
   min-height: 100vh;
   padding-top: 5rem;
